testsuite/tests/gadt/T12468.stderr

T12468.hs:9:7: error: [GHC-88464]
    • Found hole: _ :: Int
    • In an equation for ‘f’: f I = _
    • Relevant bindings include f :: T a -> a (bound at T12468.hs:9:1)
      Constraints include a ~ Int (from T12468.hs:9:3)
      Valid hole fits include
        maxBound :: forall a. Bounded a => a
          with maxBound @Int
          (imported from ‘Prelude’ at T12468.hs:3:8-13
           (and originally defined in ‘GHC.Internal.Enum’))
        minBound :: forall a. Bounded a => a
          with minBound @Int
          (imported from ‘Prelude’ at T12468.hs:3:8-13
           (and originally defined in ‘GHC.Internal.Enum’))
